--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "bootstrap": "^5.0.2",
     "primeicons": "^4.1.0",
     "primeng": "^12.0.0",
     "rxjs": "~6.6.0",
